--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "url": "https://github.com/naipeloz/playing-with-git/issues"
   },
   "homepage": "https://github.com/naipeloz/playing-with-git#readme",
-  "dependencies": {
+  "devDependencies": {
     "jest": "^28.1.3"
   }
 }
