--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "playing-with-git",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +16,9 @@
   },
   "homepage": "https://github.com/naipeloz/playing-with-git#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "jest": "^28.1.3"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
